--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bangers&display=swap">
     <script defer src="./js/main.js"></script>
     <title>Snake Game</title>
 </head>
 <body>
-    <h1>SNAKE GAME</h1>
+    <h1>🐍 S N A K E&ensp;G A M E 🐍</h1>
     <canvas id="snake" width="512" height="512">
     </canvas>
 </body>
