--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bangers&display=swap">
     <script defer src="./js/main.js"></script>
-    <title>Snake Game</title>
+    <title>🐍 Snake Game 🐍</title>
 </head>
 <body>
     <h1>🐍 S N A K E&ensp;G A M E 🐍</h1>
